# libftpp

./: .clang-format  .gitignore  Makefile
inc/: data_buffer.hpp  pool.hpp
src/IOStream/: thread_safe_iostream.cpp  thread_safe_iostream.hpp
src/data_structures/: data_buffer.cpp  data_buffer.hpp  data_buffer.tpp  object.tpp  pool.hpp  pool.tpp
src/design_paternes/: memento.cpp  memento.hpp  observer.hpp  singleton.hpp  state_machine.hpp
src/network/: message.hpp
src/thread/: persistent_worker.cpp  persistent_worker.hpp  thread.cpp  thread.hpp  thread_safe_queue.hpp  worker_pool.cpp  worker_pool.hpp
template/: pool.tpp
test/: CMakeLists.txt  data_buffer_test.cc  main.cc  memento_test.cc  observer_test.cc  persistent_worker_test.cc  pool_test.cc  singleton_test.cc  state_machine_test.cc  test.cpp  thread_safe_io_test.cc  thread_safe_queue_test.cc  thread_test.cc  worker_pool_test.cc
